fix(gameview): fixing wrong requests in gameview

--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -987,6 +987,6 @@ iframe{
 
 .desktopIsloggedIn {
     position: fixed;
-    margin-top: 43px !important;
+    margin-top: 43px;
     height: calc(100% - 140px);
 }
