--- a/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.css
+++ b/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.css
@@ -215,6 +215,8 @@ tbody tr:last-child td:first-child {
 }
 .button-container {
     display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     gap: 5px;
     width: 100%;
     justify-content: center;
@@ -226,13 +228,18 @@ tbody tr:last-child td:first-child {
     display: flex;
     align-items: flex-start;
     margin: 3px;
+    margin-bottom: 0px;
 }
 .cupom-container{
     display: none;
 }
  @media only screen and (max-width: 532px) {
     .footer-container {
+        background-color: var(--game);
         display: block;
+        margin: 3px;
+        margin-top: 0px;
+        font-size: 12px;
     }
     .cupom-header {
         margin: 0 5px;
@@ -240,16 +247,9 @@ tbody tr:last-child td:first-child {
         column-count: 1;
         /* margin-bottom: 15px; */
     }
-    .table-container,
-    .modal-header .info-horario {
-        display: none;
-    }
-    .cupom-container{
-        display: block;
-    }
     .modal-body {
-        max-height: 100vh;
-        height: 100vh;
+        max-height: 65dvh;
+        height: 65dvh;
     }
     .total-jogos, .aposta, .ganho, .cambista-paga, .resultado {
         display: flex;
@@ -276,9 +276,30 @@ tbody tr:last-child td:first-child {
     }
  }
  @media only screen and (max-width: 1024px) {
+    .button-container {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
     .modal-body {
-        max-height: 100vh;
-        height: 100vh;
+        min-height: 65dvh;
+        height: 65dvh;
+    }
+    .table-container,
+    .modal-header .info-horario {
+        display: none;
+    }
+    .cupom-container{
+        display: block;
+    }
+    .horario {
+        font-size: 12px !important;
+    }
+    .campeonato .info-cupom {
+        font-size: 12px;
+    }
+    .footer-container > .cupom > .item > p {
+        margin: 0;
     }
  }
 
