--- a/src/app/loterias/quininha/quininha.component.html
+++ b/src/app/loterias/quininha/quininha.component.html
@@ -50,7 +50,7 @@
                                                 [ngClass]="applyCssInputError('sorteio')">
                                             <option [value]="null">{{'geral.selecione' | translate}}</option>
                                             <option *ngFor="let sorteio of sorteios" [ngValue]="sorteio">
-                                                {{sorteio.nome}}
+                                                {{sorteio.name ? sorteio.name : 'Sorteio'}} - {{sorteio.formatDate}}
                                             </option>
                                         </select>
                                         <app-error-msg [control]="form.get('sorteio')" label="{{'loteria.sorteio' | translate}}">
