Fix CSS and logic Test request

--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
@@ -281,11 +281,6 @@
     gap: 16px;
 }
 
-#legitimuz-action-faceindex, #legitimuz-action-verify, #exDocCheckAction {
-    flex: 1;
-    width: 25%;
-}
-
 @media only screen and (max-width: 1024px) {
     #default-content {
         padding: 20px;
@@ -351,11 +346,30 @@
         width: 100%;
     }
 
-    #legitimuz-action-verify, #legitimuz-action-faceindex {
+
+    #legitimuz,
+    #docCheck {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    #legitimuz-action-faceindex,
+    #legitimuz-action-verify,
+    #exDocCheckAction {
+        flex: 1;
         width: 100%;
     }
 }
+@media only screen and (min-width: 1025px) {
 
+    #legitimuz-action-faceindex,
+    #legitimuz-action-verify,
+    #exDocCheckAction {
+        flex: 1;
+        width: 25%;
+    }
+}
 .btn-custom i {
     margin-right: 8px;
 }
