--- a/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.css
+++ b/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.css
@@ -100,5 +100,12 @@ h5 {
     }
 }
 
+#legitimuz-action-faceindex,
+#legitimuz-action-verify,
+#exDocCheckAction {
+    
+    margin-bottom: 16px;
+}
+
 
 
