--- a/src/app/shared/layout/modals/confirm-modal/confirm-modal.component.css
+++ b/src/app/shared/layout/modals/confirm-modal/confirm-modal.component.css
@@ -24,6 +24,25 @@ button {
 }
 
 
+@media only screen and (max-width: 1024px) {
+
+    #legitimuz,
+    #docCheck {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    #legitimuz-action-faceindex,
+    #legitimuz-action-verify,
+    #exDocCheckAction {
+        flex: 1;
+    }
+}
+
+
+
+
 
 
 
