--- a/src/app/shared/layout/modals/confirm-modal/confirm-modal.component.html
+++ b/src/app/shared/layout/modals/confirm-modal/confirm-modal.component.html
@@ -57,7 +57,7 @@
                         ('saques.identityVerifyNeeded' | translate)}}
                     </div>
                     <button id="exDocCheckAction" *ngIf="!disapprovedIdentity" [attr.data-ex-doccheck-document]="dataUserCPF"
-                        [attr.data-ex-doccheck-document-hmac-hash]="secretHash" class="btn btn-custom"
+                        [attr.data-ex-doccheck-document-hmac-hash]="secretHash" [disabled]="faceMatchActive"  class="btn btn-custom"
                         [attr.data-ex-doccheck-force-enrollment]="false">
                         <i class="fa-solid fa-id-card"></i>
                         {{'saques.identityVerify' | translate}}
