--- a/src/app/informacoes/informacoes.component.css
+++ b/src/app/informacoes/informacoes.component.css
@@ -1,26 +1,200 @@
 #default-content {
-    padding: 0;
-    margin: 0;
-    background-color: var(--background);
-    color: var(--foreground-header);
+    width: 100%;
 }
 
-.content-header h2 {
-    color: var(--foreground-header);
+.content {  
+    width: 100%; 
+    display: flex;
+    padding: 16px 80px;
+    align-items: flex-start;
+    gap: 32px;
+    align-self: stretch;
+    margin-top: 40px;
 }
 
-.wrap-stick {
-    padding: 20px 15px;
-    margin: 0;
+.content-page {
+    line-height: 2rem
+}
+
+.content-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-self: stretch;
+}
+
+.container-left {
+    display: flex;
+    width: 80%;
+    padding: 24px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    border-radius: 8px;
+}
+
+.container-rigth {
+    display: flex;
+    padding: 40px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 8px;
+    flex: 1 0 0;
+    height: 100%;
+    border-radius: 8px;
+    width: 20%;
+}
+
+.container-left, .container-rigth {
+    background-color: var(--header);
 }
 
 .btn {
-    width: 25px;
-    font-size: 22px;
     color: var(--foreground-header);
-    margin: 5px;
+    display: flex;
+    width: 128px;
+    height: 54px;
+    flex-direction: column;
+    align-items: center;
 }
 
-.btn:hover {
+.btn:hover, .links a:hover {
     color: var(--highlight);
+}
+
+a.active {
+    color: var(--highlight) !important; 
+    font-weight:  900 !important;
+    opacity: 100% !important;
+}
+
+.buttons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex: 1 0 0;
+}
+
+.title {
+    color: var(--highlight);
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+}
+
+.links {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.links a{
+    color: var(--foreground-header);
+    opacity: 0.7;
+}
+
+#button span {
+    color: var(--foreground-header);
+    text-align: center;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+}
+
+.fa-solid {
+    flex-shrink: 0;
+    font-size: 22px;
+    justify-self: center434;
+}
+
+@media only screen and (max-width: 1024px){
+    .title {
+        font-size: 18px !important;
+        font-style: normal !important;
+        font-weight: 700 !important;
+        line-height: 100% !important;
+    }
+
+    .content-header {
+        flex-direction: column;
+    }
+
+    .content-header h2{
+        margin-bottom: 24px;
+    }
+
+    .buttons {
+        display: flex;
+        flex-direction: row;
+        gap: 8px;
+        flex: 1 0 0;
+        align-self: stretch;
+        justify-content: flex-start;
+    }
+
+    .container-rigth {
+        display: none;
+    }
+
+    .container-left {
+       width: 100%;
+    }
+
+    .content {  
+        padding: 24px 16px;
+        margin-top: 0px;
+    }
+    
+    .content-page p {
+        font-size: 12px !important;
+        font-style: normal !important;
+        font-weight: 400 !important;
+    }
+
+    .buttons {
+        height: 100%;
+        width: 50%;
+    }
+
+    #button-print, #button-download {
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        justify-items: center;
+    }
+
+    .btn {
+        width: 25%;
+        color: var(--foreground-header);
+        display: flex;
+        flex-direction: row;
+        padding: 4px 16px;
+        align-items: center;
+        gap: 8px;
+        align-self: stretch;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 100%;
+        word-break: normal;
+        white-space: nowrap; 
+    }
+    
+    #button-download {
+        gap: 4px !important;
+        padding: 4px 8px !important;
+    }
+ 
+}
+@media only screen and (max-width: 500px){
+.fa-solid {
+    flex-shrink: 0;
+    font-size: 14px;
+}
+
+.btn {
+    font-size: 12px;
+}
+
 }
