--- a/src/app/shared/layout/modals/register-modal/parts/stepper-progress-bar/stepper-progress-bar.component.html
+++ b/src/app/shared/layout/modals/register-modal/parts/stepper-progress-bar/stepper-progress-bar.component.html
@@ -1,1 +1,26 @@
-<p>stepper-progress-bar works!</p>
+<div class="container-stepper">
+    <div class="stepper">
+        <div class="circle">
+            <span class="circle-number">1</span>
+        </div>
+        <div style="line-height: 95%;">
+            <span class="circle-text" style="color: #FFF;">Dados pessoais</span>
+        </div>
+    </div>
+    <div class="stepper" style="border-bottom: 1px solid rgba(255, 255, 255, 0.20);">
+        <div class="circle-disabled">
+            <span class="circle-number">2</span>
+        </div>
+        <div>
+            <span class="circle-text">Endereço</span>
+        </div>
+    </div>
+    <div class="stepper" style="border-bottom: 1px solid rgba(255, 255, 255, 0.20);">
+        <div class="circle-disabled">
+            <span class="circle-number">3</span>
+        </div>
+        <div>
+            <span class="circle-text">Login</span>
+        </div>
+    </div>
+</div>
