--- a/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
+++ b/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
@@ -39,3 +39,10 @@
     border-radius: 0.375rem;
     opacity: 0.5;
 }
+
+@media only screen and (min-width: 1025px) {
+    .container{
+        min-height: 572px;
+        padding: 0 33px;
+    }
+}
