--- a/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.html
+++ b/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.html
@@ -5,7 +5,7 @@
     <div class="titulo">{{'geral.perfil' | translate}}</div>
     <div class="botao-direito"></div>
 </div>
-<div class="modal-body">
+<div class="modal-body" *ngIf="!showLoading">  
     <ng-container>
         <div class="content-body">
             <div class="content">
