fix: show cashback list in mobile resolution

--- a/src/app/clientes/cashback/cashback.component.html
+++ b/src/app/clientes/cashback/cashback.component.html
@@ -61,7 +61,7 @@
                 Nenhum cashback foi encontrado nesse período.
             </div>
             <div *ngIf="cashbacks.length > 0">
-                <div class="table-responsive only-desktop">
+                <div class="table-responsive">
                     <table class="table">
                         <thead>
                             <tr>
@@ -103,7 +103,7 @@
                         </tbody>
                     </table>
                 </div>
-            </div>            
+            </div>
         </div>
     </div>
 </div>
