chore: test review changes

--- a/src/app/shared/layout/exibir-bilhete/loteria/exibir-bilhete-loteria.component.html
+++ b/src/app/shared/layout/exibir-bilhete/loteria/exibir-bilhete-loteria.component.html
@@ -36,7 +36,7 @@
                 <div class="dezenas-info">
                     <div class="dezenas-title">
                         <p class="informacoes-item">
-                            DEZENAS:
+                            Dezenas:
                         </p>
                     </div>
                     <div class="dezenas-apostadas">
