Feat: Implementing redirect link in banner on promotions page

--- a/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.html
+++ b/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.html
@@ -3,7 +3,9 @@
         <app-spinner *ngIf="showLoadingIndicator"></app-spinner>
         <div *ngIf="!showLoadingIndicator" style="height: -webkit-fill-available;">
             <div class="desktop-image">
-                <img style="width: 100%;" src="https://weebet.s3.amazonaws.com/{{ SLUG }}/paginaPromocao/{{ promocao.imagemDesktop }}" alt="">
+                <a href="{{promocao.link}}" target="{{promocao.linkBlank ? '_blank' : '_self'}}">
+                    <img style="width: 100%;" src="https://weebet.s3.amazonaws.com/{{ SLUG }}/paginaPromocao/{{ promocao.imagemDesktop }}" alt="">
+                </a>
             </div>
             <div class="content-header">
                 <h2 style="color: var(--foreground-sidebars);">{{ promocao.promocaoNome }}</h2>
