--- a/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
+++ b/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
@@ -40,6 +40,12 @@
     opacity: 0.5;
 }
 
+.body{
+    display: flex;
+    flex-direction: column;
+    gap: 21px;
+}
+
 @media only screen and (min-width: 1025px) {
     .container{
         min-height: 572px;
