--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,27 +1,43 @@
 /* semantic color variables for this project */
 :root {
-  --header:#0a0a09; 
-  --foreground-header:#ffffff;
-  --sub-nav:#181818;
-  --foreground-sub-nav:#ffffff;
-  --sidebars:#0a0a09;
-  --foreground-sidebars:#ffffff;
-  --highlight:#35cd96;
-  --highlight-rgb:53,205,150;
-  --foreground-highlight:#181818;
-  --inputs-odds:#181818;
-  --foreground-inputs-odds:#ffffff;
-  --game:#0a0a09;
-  --foreground-game:#ffffff;
-  --background:#181818;
-  --background-rgb:24,24,24;
-  --foreground:#ffffff;
-  --league:#0a0a09;
-  --foreground-league:#ffffff;
-  --wb-warning:#ff0000;
-  --bottom-bar:#282828;
-  --foreground-bottom-bar:#ffffff;
-  --color-danger: #f61a1a;
-  --color-warning: #c09516;
-  --color-success: #6da544;
+
+  --background: #0a0a0a;
+  --background-rgb: 10,10,10;
+
+  --foreground: #ffffff;
+  --foreground-rgb: 255,255,255;
+
+  --highlight: #35cd96;
+  --highlight-rgb: 53,205,150;
+
+  --highlight-foreground: #0a0a0a;
+  --highlight-foreground-rgb: 10,10,10;
+
+  --championship: #0a0a0a;
+  --championship-rgb: 10,10,10;
+
+  --championship-foreground: #ffffff;
+  --championship-foreground-rgb: 255,255,255;
+
+  --game: #181818;
+  --game-rgb: 24, 24, 24;
+
+  --game-foreground: #ffffff;
+  --game-foreground-rgb: 255,255,255;
+
+  --button: #0a0a0a;
+  --button-rgb: 10,10,10;
+
+  --button-foreground: #ffffff;
+  --button-foreground-rgb: 255,255,255;
+
+  --input: #181818;
+  --input-rgb: 10,10,10;
+
+  --input-foreground: #ffffff;
+  --input-foreground-rgb: 255,255,255;
+
+  --danger: #f61a1a;
+  --warning: #c09516;
+  --success: #6da544;
 }
